remove minegram configs & launch